[gd_scene load_steps=5 format=3 uid="uid://d3bgtynatvwu2"]

[ext_resource type="Script" uid="uid://bdonslj6pabtb" path="res://ui/menu/CheatMenu.gd" id="1_b1vkb"]
[ext_resource type="Theme" uid="uid://ckxlwln5s1u4b" path="res://ui/theme/PauseMenuTheme.tres" id="2_h4ill"]
[ext_resource type="Script" uid="uid://db85fb86bo305" path="res://ui/menu/FocusOnHover.gd" id="3_w2w86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8tehv"]

[node name="CheatMenu" type="PanelContainer"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8tehv")
script = ExtResource("1_b1vkb")
metadata/_custom_type_script = "uid://vl5uuupklejb"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_h4ill")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_h4ill")
theme_override_constants/separation = 20
alignment = 1

[node name="Money" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_h4ill")
text = "More Money"

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/Money"]
script = ExtResource("3_w2w86")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="PermCards" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_h4ill")
text = "All Perm Cards
"

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/PermCards"]
script = ExtResource("3_w2w86")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="BattleCards" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_h4ill")
text = "All Battle Cards
"

[node name="FocusOnHover" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer/BattleCards"]
script = ExtResource("3_w2w86")
metadata/_custom_type_script = "uid://db85fb86bo305"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Money" to="." method="moreMoney"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PermCards" to="." method="allPermCards"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BattleCards" to="." method="allBattleCards"]
